--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "projeto-mundotaekwondo",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Portal completo sobre Taekwondo desenvolvido com HTML, CSS e React",
+  "keywords": ["taekwondo", "martial-arts", "react", "portal", "website"],
+  "author": "Mundo Taekwondo",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "react": "^19.1.1",
